--- a/Quiz.html
+++ b/Quiz.html
@@ -13,6 +13,6 @@
 <button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
-
+<script type="text/javascript" src="Quiz.js"></script>
 </body>
 </html>
