Navigation bar added
Added code for menu/navigation bar

--- a/Quiz.html
+++ b/Quiz.html
@@ -5,6 +5,14 @@
     <link rel="stylesheet" href="Quiz.css" type="text/css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">High Scores</a></li>
+            <li><a href="#">About me</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>    
+    </nav>    
   <div id="quiz"></div>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
