--- a/Quiz.html
+++ b/Quiz.html
@@ -5,14 +5,44 @@
     <link rel="stylesheet" href="Quiz.css" type="text/css">
 </head>
 <body>
-    <h1>Quiz on Important Facts</h1>
-<div class="quiz-container">
-  <div id="quiz"></div>
-</div>
-<button id="previous">Previous Question</button>
-<button id="next">Next Question</button>
+
+ <div style="background-color: antiquewhite; padding: 00 10 00 00;">
+
+
+  <header id="head">Health Quiz</header>
+
+  <div id="flex">
+
+    <!-- div with quick facts about me -->
+    <div id="about"> 
+        
+        <!-- title for basic info div -->
+        <div id="title">
+        <span style = "text-align: center;"> <h2>Menu</h2></span>
+         </div>
+    <br>
+    <div style="padding-left: 10%;">
+
+    Home<br><br>
+
+    High Scores<br><br>
+
+    About Us<br><br>
+
+    Contact<br><br>
+    
+    </div>
+  </div>
+  <div style="padding: 00 00 00 5%;">
+
+    <div id="quiz"></div>  
 <button id="submit">Submit Quiz</button>
+  </div>
+  <!-- <div id="quiz" style="padding: 00 00 00 5%;"></div> -->
+  </div>
+<!-- <button id="submit">Submit Quiz</button> -->
 <div id="results"></div>
+  </div>
 <script type="text/javascript" src="Quiz.js"></script>
 </body>
 </html>
