--- a/Quiz.html
+++ b/Quiz.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>QuizGame</title>
+    <link rel="favicon/icon" href="LogoMakr_3VDkyB.png">
     <link rel="stylesheet" href="Quiz.css" type="text/css">
 </head>
 <body>
