--- a/Quiz.html
+++ b/Quiz.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="Quiz.css" type="text/css">
 </head>
 <body>
+    <h1>Quiz on Important Facts</h1>
+<div class="quiz-container">
   <div id="quiz"></div>
+</div>
+<button id="previous">Previous Question</button>
+<button id="next">Next Question</button>
 <button id="submit">Submit Quiz</button>
 <div id="results"></div>
 <script type="text/javascript" src="Quiz.js"></script>
