--- a/Quiz.html
+++ b/Quiz.html
@@ -3,6 +3,7 @@
 <head>
     <title>QuizGame</title>
     <link rel="stylesheet" href="Quiz.css" type="text/css">
+    <link rel="shortcut icon" href="LogoMakr_3VDkyB.png">
 </head>
 <body>
     <nav>
